--- a/menu.html
+++ b/menu.html
@@ -61,13 +61,13 @@
       };
 
       var foodItems = [
-        { name: "Rise", tags: ["healthy"] },
+        { name: "Rice", tags: ["healthy"] },
         { name: "Butter Chicken", tags: ["unhealthy", "heart_disease", "high_cholesterol"] },
-        { name: "Chapppathi", tags: ["healthy"] },
+        { name: "Chapathi", tags: ["healthy"] },
         { name: "Samosa", tags: ["unhealthy", "diabetes", "high_blood_pressure"] },
         { name: "Paneer Tikka", tags: ["healthy"] },
         { name: "Pongal", tags: ["unhealthy", "diabetes"] },
-        { name: "Biryani", tags: ["unhealthy", "heart_disease", "high_cholesterol"] },
+        { name: "Briyani", tags: ["unhealthy", "heart_disease", "high_cholesterol"] },
         { name: "Idli", tags: ["healthy"] },
         { name: "Dosa", tags: ["healthy"] },
         { name: "Chicken 65", tags: ["unhealthy", "diabetes", "heart_disease"] },
