--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </div>
 
     <h1>Welcome to Our Health-Based Food Menu</h1>
+    <h5>This site is best viewed in landscape while using mobile</h5>
     <p>Customize your food menu based on your health conditions.</p>
     <button class="button" onclick="window.location.href='question1.html'">Start Here</button>
   </div>
