--- a/menu.html
+++ b/menu.html
@@ -92,5 +92,6 @@
       });
     });
   </script>
+  <button class="button" onclick="window.location.href='index.html'">Back to Home</button>
 </body>
 </html>
